# python-boilerplate

./: Makefile  README.md  pyproject.toml  ruff.toml
