[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "boilerplate"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # "fastapi>=0.88.0", "uvicorn>=0.20.0", "pandas"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.0.219",
    "watchdog>=2.1.9",
    "httpx>=0.23.2",
]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 80
